# PlayWithC

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  link_list.c  link_list.h  main.c
